@@ -52,7 +52,8 @@ def get_appsettings(config_uri, name=None, options=None, appconfig=appconfig):
         relative_to=here_dir,
         global_conf=options)
 
-def setup_logging(config_uri, fileConfig=fileConfig,
+def setup_logging(config_uri, global_conf=None,
+                  fileConfig=fileConfig,
                   configparser=configparser):
     """
     Set up logging via the logging module's fileConfig function with the
@@ -61,16 +62,22 @@ def setup_logging(config_uri, fileConfig=fileConfig,
 
     ConfigParser defaults are specified for the special ``__file__``
     and ``here`` variables, similar to PasteDeploy config loading.
+    Extra defaults can optionally be specified as a dict in ``global_conf``.
     """
     path, _ = _getpathsec(config_uri, None)
     parser = configparser.ConfigParser()
     parser.read([path])
     if parser.has_section('loggers'):
         config_file = os.path.abspath(path)
-        return fileConfig(
-            config_file,
-            dict(__file__=config_file, here=os.path.dirname(config_file))
-            )
+        if global_conf:
+            # Copy to avoid side effects
+            global_conf = dict(global_conf)
+        else:
+            global_conf = {}
+        global_conf.update(
+            __file__=config_file,
+            here=os.path.dirname(config_file))
+        return fileConfig(config_file, global_conf)
 
 def _getpathsec(config_uri, name):
     if '#' in config_uri:
